kubernetes/apps/opencloud/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
  namespace: opencloud
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-opencloud
  hostnames:
    - "opencloud.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencloud
          port: 9200
